<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_ComSerialConfig" Id="{0c582716-596d-09e3-3ec5-25b17e8b790a}">
    <Declaration><![CDATA[TYPE ST_ComSerialConfig :
STRUCT
ComPort 	: UDINT 		:=8; (* Serial port number [1..255] *)
Baudrate 	: UDINT 		:=57600;
Parity 		: ComParity_t 	:=PARITY_NONE;
DataBits 	: INT 			:=8; (* [4..8] *)
StopBits 	: ComStopBits_t :=STOPBITS_ONE;
DTR 		: ComDTRCtrl_t 	:=DTR_CTRL_ENABLE; (* 'Data Terminal Ready' signal *)
RTS 		: ComRTSCtrl_t 	:=RTS_CTRL_ENABLE; (* 'Request to Send' signal (= RFR 'Ready for Receiving') *)
CTS 		: BOOL 			:=FALSE; (* 'Clear to Send' signal *)
DSR 		: BOOL 			:=FALSE; (* 'Dataset Ready' signal *)
TraceLevel 	: BYTE 			:=0; (* None=0;Error=1,Warning=2,Info=3,Verbose=4,Noise=5 *)
Reserved1 	: BYTE;
Reserved2 	: BYTE;
Reserved3 	: BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>